--- a/common.it.po
+++ b/common.it.po
@@ -8729,7 +8729,7 @@ msgstr "Controlla la trasparenza dei waypoint"
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:77
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:130
 msgid "Font size:"
-msgstr ""
+msgstr "Grandezza testo:"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:83
 msgid "Edge offset:"
