--- a/common.ast.po
+++ b/common.ast.po
@@ -8548,7 +8548,7 @@ msgstr "Controla la tresparencia de los puntos de camín"
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:77
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:130
 msgid "Font size:"
-msgstr ""
+msgstr "Tamañu de fonte:"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:83
 msgid "Edge offset:"
