--- a/common.de_CH.po
+++ b/common.de_CH.po
@@ -8747,7 +8747,7 @@ msgstr "Verändere den Wert der Transparenz von der Anzeige der Wegpunkte"
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:77
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:130
 msgid "Font size:"
-msgstr ""
+msgstr "Schriftgrösse:"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:83
 msgid "Edge offset:"
