--- a/common.fr.po
+++ b/common.fr.po
@@ -23,7 +23,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-07-24 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Hugo Locurcio, 2013-2014\n"
+"Last-Translator: Yannick Le Guen <leguen.yannick@gmail.com>, 2013-2022\n"
 "Language-Team: French (http://www.transifex.com/team-xonotic/xonotic/"
 "language/fr/)\n"
 "Language: fr\n"
@@ -1600,7 +1600,7 @@ msgstr "roquettes"
 
 #: qcsrc/common/items/item/ammo.qh:176
 msgid "shells"
-msgstr "carapaces"
+msgstr "cartouches"
 
 #: qcsrc/common/items/item/armor.qh:42
 msgid "Small armor"
